--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTTYE html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+</head>
+<body>
+    <h1>Privacy Policy</h1>
+    <br>
+    <br>
+    <h3>Our mobile apps will store users' data on his/her local storage. Our apps will not store users' data on our site.</h3>
+</body>
+</html>
